@@ -378,7 +378,7 @@ public class PPLQueryDataAnonymizer extends AbstractNodeVisitor<String, String> 
 
   @Override
   public String visitFlatten(Flatten node, String context) {
-    String child = node.getChild().getFirst().accept(this, context);
+    String child = node.getChild().get(0).accept(this, context);
     String field = visitExpression(node.getField());
     return StringUtils.format("%s | flatten %s", child, field);
   }
